--- a/app/src/main/res/values/myTextViewStyle.xml
+++ b/app/src/main/res/values/myTextViewStyle.xml
@@ -1,6 +1,7 @@
 <resources>
     <style name="MyTextViewStyle" parent="Widget.AppCompat.TextView">
-
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">25dp</item>
     </style>
