--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,10 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="이름: 김윤호" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/calcResult"
+            android:text=""/>
     </LinearLayout>
 </LinearLayout>
