--- a/app/src/main/res/values/myButtonStyle.xml
+++ b/app/src/main/res/values/myButtonStyle.xml
@@ -4,7 +4,7 @@
         <item name="background">@drawable/mybutton</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:layout_rowWeight">1</item>
-        <item name="android:text">30dp</item>
+        <item name="android:textSize">30dp</item>
         <item name="android:layout_margin">5dp</item>
     </style>
 </resources>
