--- a/app/src/main/res/values/myButtonStyle.xml
+++ b/app/src/main/res/values/myButtonStyle.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="myButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="myButtonStyle" parent="Widget.AppCompat.Button"
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
         <item name="background">@drawable/mybutton</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:layout_rowWeight">1</item>
