--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -6,8 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:paddingTop="30dp"
     tools:context=".CalcActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,66 +17,118 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="계산기1"
         app:titleTextColor="@android:color/black" />
-
-    <EditText
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="3dp"
+        android:layout_weight="1"
         android:id="@+id/numBlank"
         android:hint="put num here"/>
+
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:rowCount="4"
         android:columnCount="4"
         android:layout_gravity="center"
         android:orientation="horizontal">
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="0"
+            android:layout_column="0"
             android:text="7"
             android:id="@+id/calc7"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="0"
+            android:layout_column="1"
             android:text="8"
             android:id="@+id/calc8"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="0"
+            android:layout_column="2"
             android:text="9"
             android:id="@+id/calc9"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="0"
+            android:layout_column="3"
             android:text="/"
             android:id="@+id/calcD"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="1"
+            android:layout_column="0"
             android:text="4"
             android:id="@+id/calc4"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="1"
+            android:layout_column="1"
             android:text="5"
             android:id="@+id/calc5"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="1"
+            android:layout_column="2"
             android:text="6"
             android:id="@+id/calc6"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="1"
+            android:layout_column="3"
             android:text="x"
             android:id="@+id/calcX"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="2"
+            android:layout_column="0"
             android:text="1"
             android:id="@+id/calc1"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="2"
+            android:layout_column="1"
             android:text="2"
             android:id="@+id/calc2"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="2"
+            android:layout_column="2"
             android:text="3"
             android:id="@+id/calc3"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="2"
+            android:layout_column="3"
             android:text="-"
             android:id="@+id/calcM"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="3"
+            android:layout_column="0"
             android:text="0"
             android:id="@+id/calc0"/>
         <Button
-            android:layout_rowSpan="2"
+            style="@style/myButtonStyle"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="2"
             android:text="="
             android:id="@+id/calcE"/>
         <Button
+            style="@style/myButtonStyle"
+            android:layout_row="3"
+            android:layout_column="3"
             android:text="+"
             android:id="@+id/calcP"/>
-
     </GridLayout>
 
 </LinearLayout>
