--- a/app/src/main/res/values/myButtonStyle.xml
+++ b/app/src/main/res/values/myButtonStyle.xml
@@ -3,10 +3,11 @@
     <style name="myButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
-        <item name="background">@drawable/mybutton</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:layout_rowWeight">1</item>
         <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:background">@drawable/mybutton</item>
     </style>
 </resources>
