--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Calc1Activity">
+    tools:context=".CalcActivity">
     
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
