--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -38,6 +38,7 @@
             android:id="@+id/calc7"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_rowWeight="1"
@@ -50,6 +51,7 @@
             android:id="@+id/calc8"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -61,6 +63,7 @@
             android:id="@+id/calc9"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="0"
             android:layout_column="2"
             android:layout_rowWeight="1"
@@ -72,6 +75,7 @@
             android:id="@+id/calcD"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="0"
             android:layout_column="3"
             android:layout_rowWeight="1"
@@ -84,6 +88,7 @@
             android:id="@+id/calc4"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="1"
             android:layout_column="0"
             android:layout_rowWeight="1"
@@ -95,6 +100,7 @@
             android:id="@+id/calc5"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="1"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -106,6 +112,7 @@
             android:id="@+id/calc6"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="1"
             android:layout_column="2"
             android:layout_rowWeight="1"
@@ -117,6 +124,7 @@
             android:id="@+id/calcX"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="1"
             android:layout_column="3"
             android:layout_rowWeight="1"
@@ -129,6 +137,7 @@
             android:id="@+id/calc1"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="2"
             android:layout_column="0"
             android:layout_rowWeight="1"
@@ -140,6 +149,7 @@
             android:id="@+id/calc2"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="2"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -151,6 +161,7 @@
             android:id="@+id/calc3"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="2"
             android:layout_column="2"
             android:layout_rowWeight="1"
@@ -162,6 +173,7 @@
             android:id="@+id/calcM"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="2"
             android:layout_column="3"
             android:layout_rowWeight="1"
@@ -174,6 +186,7 @@
             android:id="@+id/calc0"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="3"
             android:layout_column="0"
             android:layout_rowWeight="1"
@@ -185,6 +198,7 @@
             android:id="@+id/calcE"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="3"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -197,6 +211,7 @@
             android:id="@+id/calcP"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/mybutton"
             android:layout_row="3"
             android:layout_column="3"
             android:layout_rowWeight="1"
