--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -34,7 +34,7 @@
         android:rowCount="4"
         android:orientation="horizontal"
         android:layout_gravity="center">
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc7"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -47,7 +47,7 @@
             android:textSize="30dp"
             android:layout_margin="5dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc8"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -59,7 +59,7 @@
             android:text="8"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc9"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -71,7 +71,7 @@
             android:text="9"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calcD"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -84,7 +84,7 @@
             android:textSize="30dp"
             android:layout_margin="5dp"
             android:enabled="false"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc4"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -96,7 +96,7 @@
             android:text="4"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc5"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -108,7 +108,7 @@
             android:text="5"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc6"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -120,7 +120,7 @@
             android:text="6"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calcX"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -133,7 +133,7 @@
             android:textSize="30dp"
             android:layout_margin="5dp"
             android:enabled="false"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc1"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -145,7 +145,7 @@
             android:text="1"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc2"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -157,7 +157,7 @@
             android:text="2"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc3"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -169,7 +169,7 @@
             android:text="3"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calcM"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -182,7 +182,7 @@
             android:textSize="30dp"
             android:layout_margin="5dp"
             android:enabled="false"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calc0"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -194,7 +194,7 @@
             android:text="0"
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calcE"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -207,7 +207,7 @@
             android:text="="
             android:textSize="30dp"
             android:layout_margin="5dp"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/calcP"
             android:layout_width="0dp"
             android:layout_height="0dp"
